--- a/RFB/especificação/index-pt.html
+++ b/RFB/especificação/index-pt.html
@@ -776,7 +776,7 @@ Esta se&ccedil;&atilde;o fornece detalhes sobre cada classe e propriedade defini
          </dd>
          <dt>está na gama de</dt>
          <dd>
-            <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">has partner</a>
+            <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">tem sócio</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>, <a href="#http://xmlns.com/foaf/0.1/member" title="http://xmlns.com/foaf/0.1/member">membro</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>
          </dd>
@@ -973,7 +973,7 @@ Art. 46. A inscrição no CNPJ é enquadrada na situação cadastral baixada qua
                title="http://www.sefaz.ma.gov.br/ontology/is_part_of_group">Faz parte do Grupo</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/is_MEI" title="http://www.sefaz.ma.gov.br/ontology/is_MEI">empresa é um Microempreendedor Individual (MEI)?</a>
             <sup class="type-dp" title="propriedade de dados">dp</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/option_simples"
-               title="http://www.sefaz.ma.gov.br/ontology/option_simples">has option for SIMPLES</a>
+               title="http://www.sefaz.ma.gov.br/ontology/option_simples">tem opção por SIMPLES</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/has_establishment"
                title="http://www.sefaz.ma.gov.br/ontology/has_establishment">tem estabelecimento</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/has_subsidiary"
@@ -1528,7 +1528,7 @@ Empresas de Pequeno Porte, a partir de 01/07/2007.</span>
          <dt>está na gama de</dt>
          <dd>
             <a href="#http://www.sefaz.ma.gov.br/ontology/option_simples"
-               title="http://www.sefaz.ma.gov.br/ontology/option_simples">has option for SIMPLES</a>
+               title="http://www.sefaz.ma.gov.br/ontology/option_simples">tem opção por SIMPLES</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>
          </dd>
       </dl>
@@ -1715,7 +1715,7 @@ Empresas de Pequeno Porte, a partir de 01/07/2007.</span>
          <dd>
             <a href="#http://www.sefaz.ma.gov.br/ontology/partnership_start_date"
                title="http://www.sefaz.ma.gov.br/ontology/partnership_start_date">data de início da sociedade</a>
-            <sup class="type-dp" title="propriedade de dados">dp</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">has partner</a>
+            <sup class="type-dp" title="propriedade de dados">dp</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">tem sócio</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>, <a href="#http://www.sefaz.ma.gov.br/ontology/partner_qualification"
                title="http://www.sefaz.ma.gov.br/ontology/partner_qualification">qualificação do sócio</a>
             <sup class="type-op" title="propriedade do objeto">op</sup>
@@ -1916,10 +1916,10 @@ VII - incompatibilidade entre o Número de Inscrição no Registro de Empresa (N
       </li>
       <li>
          <a href="#http://www.sefaz.ma.gov.br/ontology/option_simples"
-            title="http://www.sefaz.ma.gov.br/ontology/option_simples">has option for SIMPLES</a>
+            title="http://www.sefaz.ma.gov.br/ontology/option_simples">tem opção por SIMPLES</a>
       </li>
       <li>
-         <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">has partner</a>
+         <a href="#http://www.sefaz.ma.gov.br/ontology/has_partner" title="http://www.sefaz.ma.gov.br/ontology/has_partner">tem sócio</a>
       </li>
       <li>
          <a href="#http://xmlns.com/foaf/0.1/member" title="http://xmlns.com/foaf/0.1/member">
@@ -2091,7 +2091,7 @@ VII - incompatibilidade entre o Número de Inscrição no Registro de Empresa (N
       </div>
    </div>
    <div class="entity" id="http://www.sefaz.ma.gov.br/ontology/option_simples">
-      <h3>has option for SIMPLES<sup class="type-op" title="propriedade do objeto">op</sup>
+      <h3>tem opção por SIMPLES<sup class="type-op" title="propriedade do objeto">op</sup>
          <span class="backlink"> de volta a <a href="#toc">índice</a> ou <a href="#objectproperties">Índice do Propriedade do Objeto</a>
          </span>
       </h3>
@@ -2117,7 +2117,7 @@ VII - incompatibilidade entre o Número de Inscrição no Registro de Empresa (N
       </div>
    </div>
    <div class="entity" id="http://www.sefaz.ma.gov.br/ontology/has_partner">
-      <h3>has partner<sup class="type-op" title="propriedade do objeto">op</sup>
+      <h3>tem sócio<sup class="type-op" title="propriedade do objeto">op</sup>
          <span class="backlink"> de volta a <a href="#toc">índice</a> ou <a href="#objectproperties">Índice do Propriedade do Objeto</a>
          </span>
       </h3>
