--- a/REDESIM/especificação/index-pt.html
+++ b/REDESIM/especificação/index-pt.html
@@ -52,7 +52,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-pt.html"><b>pt</b></a> </div>
-
+<h1>Ontologia da REDESIM</h1>
 
 <dl>
 <dt>&Uacute;ltima vers&atilde;o:</dt>
