--- a/IBGE - CNAE/especificação/index-pt.html
+++ b/IBGE - CNAE/especificação/index-pt.html
@@ -1475,15 +1475,10 @@ Esta se&ccedil;&atilde;o fornece detalhes sobre cada classe e propriedade defini
 </div>
     
 
-<!--REFERENCES SECTION-->
-  <div id="references">
-<h2 id="ref" class="list">Refer&ecirc;ncias <span class="backlink"> de volta a <a href="#toc">&iacute;ndice</a></span></h2>
-<span class="markdown">Adicione suas refer&ecirc;ncias aqui. Recomenda-se a t&ecirc;-los como uma lista.</span>
-
 </div>
 <div id="acknowledgements">
 <h2 id="ack" class="list">Agradecimentos <span class="backlink"> de volta a <a href="#toc">&iacute;ndice</a></span></h2>
-<p>Os autores gostariam de agradecer a <a href="http://www.essepuntato.it/">Silvio Peroni</a> para o desenvolvimento de <a href="http://www.essepuntato.it/lode">LODE</a>, documenta&ccedil;&atilde;o ambiente para OWL que &eacute; usada para gerar a descri&ccedil;&atilde;o de ontologias termos aqui descritos; e <a href="http://purl.org/net/dgarijo">Daniel Garijo</a> para o desenvolvimento de <a href="https://github.com/dgarijo/Widoco">Widoco</a>, o programa usado para criar o modelo de documento utilizado nesta documenta&ccedil;&atilde;o.</p>
+<p>Os autores gostariam de agradecer a Secretaria da Fazenda do Estado do Maranhão pela proposta e incentivo financeiro depositado ao projeto e a Universidade Federal do Ceará juntamente com a ASTEF pelo gerenciamento e apoio na execução das atividades.</p>
 </div>
 
 
