'Updating_Cadastro_Ontology_and_Specification'

--- a/RFB/especificação/index-pt.html
+++ b/RFB/especificação/index-pt.html
@@ -50,7 +50,7 @@ function loadTOC(){
 <body>
 <div class="container">
 <div class="head">
-<div style="float:right">language <a href="index-pt.html"><b>pt</b></a> </div>
+<div style="float:right">idioma <a href="index-pt.html"><b>pt</b></a> </div>
 <h1>Ontologia de Cadastro da RFB</h1>
 
 
