--- a/IBGE - Location/especificação/index-pt.html
+++ b/IBGE - Location/especificação/index-pt.html
@@ -51,7 +51,7 @@ function loadTOC(){
 <body>
 <div class="container">
 <div class="head">
-<div style="float:right">language <a href="index-pt.html"><b>pt</b></a> </div>
+<div style="float:right">idioma <a href="index-pt.html"><b>pt</b></a> </div>
 <h1>Ontologia de Localização</h1>
 
 
